# forgeNN_cpp

./: .gitignore  README.md  compile.bat  compile.sh  setup.py
diff_sim_core/: CMakeLists.txt  build.sh
diff_sim_core/include/: core.h  optimizers.h
diff_sim_core/include/engine/: activations.h  body.h  contact.h  engine.h  motor.h  optimizers.h  tensor.h
diff_sim_core/include/renderer/: renderer.h  sdl_renderer.h
diff_sim_core/src/: bindings.cpp  core.cpp  optimizers.cpp
diff_sim_core/src/engine/: activations.cpp  body.cpp  contact.cpp  engine.cpp  optimizers.cpp  tensor.cpp
diff_sim_core/src/renderer/: sdl_renderer.cpp
examples/: cartpole.py  debug_drone.py  drone.py  drone_hover.py  drone_liftoff.py  drone_new.py  drone_unstable.py  falling_box.py  falling_box_visual.py  projectile.py  shape_physics_test.py  test_body_shapes.py  test_circle_collision.py  test_engine_loop.py  test_shapes.py  text_demo.py  train_drone_sb3.py
logs/PPO_10/: events.out.tfevents.1766152252.Victus.7920.0
logs/PPO_4/: events.out.tfevents.1766150020.Victus.23744.0
logs/PPO_5/: events.out.tfevents.1766150408.Victus.17444.0
logs/PPO_6/: events.out.tfevents.1766150591.Victus.17948.0
logs/PPO_7/: events.out.tfevents.1766150859.Victus.15464.0
logs/PPO_8/: events.out.tfevents.1766151117.Victus.25524.0
logs/PPO_9/: events.out.tfevents.1766151639.Victus.9316.0
rigidrl_py/envs/: __init__.py  base_env.py  drone_env.py  spaces.py  vec_env.py
